@startuml
class Course {
    - name: String
    - instructors: ArrayList<Instructor>
    - textbooks: ArrayList<Textbook>
    + Course()
    + getName(): String
    + setName(name: String): void
    + getInstructors(): ArrayList<Instructor>
    + setInstructor(instructor: Instructor): void
    + getTextbooks(): ArrayList<Textbook>
    + setTextbook(textbook: Textbook): void
    + toString(): String
    + printCourse(): void
}

class Instructor {
    - firstName: String
    - lastName: String
    - officeNumber: String
    + getFirstName(): String
    + setFirstName(firstName: String): void
    + getLastName(): String
    + setLastName(lastName: String): void
    + getOfficeNumber(): String
    + setOfficeNumber(officeNumber: String): void
    + toString(): String
}

class Textbook {
    - title: String
    - author: String
    - publisher: String
    + getTitle(): String
    + setTitle(title: String): void
    + getAuthor(): String
    + setAuthor(author: String): void
    + getPublisher(): String
    + setPublisher(publisher: String): void
    + toString(): String
}

Course "1" o-- "*" Instructor : aggregation
Course "1" o-- "*" Textbook : aggregation

@enduml
